--- a/style.css
+++ b/style.css
@@ -863,16 +863,259 @@ body{
 }
 
 /* journy diamond  */
-.smallPara-dimndBox{
-    background-color: var(--main-color);
+.diamondSmallConatainer .container{
+    padding-right: var(--bs-gutter-x,7rem);
+    padding-left: var(--bs-gutter-x,7rem);
+    z-index: 9;
 }
-.diamondLeft_box{
-    padding-left: 5rem;
+.largeImgBox-diamond{
+    position: relative;
+    z-index: -1;
+}
+.toprelativeDiamond{
+    top: 4rem;
+}
+.bottomrelativeDiamond{
+    bottom: 4rem;
+}
+.downSmallDiamondRelative{
+    position: relative;
+    bottom: 8rem;
 }
 
-@media(max-width: 1413px){
+.smallPara-dimndBox{
+    background-color: var(--main-color);
+    color: var(--white-color);
+    height: 100%;
+}
+.diamond-small-img img{
+    height: 100%;
+}
+.diamondTxt-box{
+    padding: 8rem;
+}
+.diamondTxt-box2{
+    padding: 7rem 8rem;
+}
+.diamondLargeImage{
+    position: relative;
+}
+.diamondLarge-Imf-txt1,.diamondLarge-Imf-txt2 {
+    max-width: 400px;
+    text-align: end;
+    color: white;
+    position: absolute;
+    right: 8%;
+    bottom: 16%;
+}
+
+/* story  */
+.story-Para-txt{
+    font-size: 15px;
+}
+.story-span{
+    font-size: 17px;
+}
+.story-dot div{
+    width: 8px;
+    height: 8px;
+    background-color: var(--main-color);
+    border-radius: 50%;
+}
+.story-dot{
+    column-gap: 1rem;
+    margin: auto;
+}
+.storyImg-head{
+    margin: auto;
+    font-size: 22px;
+    color: var(--main-color);
+}
+
+/* call back  */
+.callBackMsg{
+    display: none;
+}
+
+/* palce order  */
+.placeOrderpara{
+    font-size: 20px;
+    border-bottom: 1px solid var(--main-color);
+    padding-bottom: 17px;
+}
+
+
+/* gift  */
+.gift_upper_head{
+    background-color: var(--main-color);
+    color: white;
+    font-size: 18px;
+}
+.gift_down_box_upper{
+  justify-content: space-around;
+}
+.perGift_item{
+    color: var(--light-txt);
+    cursor: pointer;
+    border: 1px solid var(--main-color);
+}
+.perGift_item:hover, .gift_color_item.active, .gift_clarity_item.active, .gift_plish_item.active, .gift_certifict_item.active, .gift_symentry_item.active, .gift_cut2_item.active, .gift_flurence_item.active{
+    background-color: var(--light-txt);
+    color: white;
+    border: 1px solid var(--light-txt);
+}
+.perGift_item p{
+    padding: 4px 0;
+}
+.gift_color_item p{
+    min-width: 60px;
+}
+.gift_clarity_item p{
+    min-width: 85px;
+}
+.gift_plish_item p{
+    min-width: 100px;
+}
+.gift_certifict_item p{
+    min-width: 80px;
+}
+.gift_symentry_item p{
+    min-width: 100px;
+}
+.gift_flurence_item p{
+    min-width: 90px;
+}
+.gift_upper_td{
+    min-width: 100px;
+    padding: 18px 0;
+}
+.gift_lower_td{
+    min-width: 100px;
+}
+.giftUpperHeader_table{
+    color: white;
+    background-color: var(--main-color);
+}
+.giftLower_tr{
+    border: 1px solid var(--main-color);
+}
+.gift_lower_td input{
+    position: relative;
+    top: .2rem;
+}
+.lightColrTableGift{
+    background-color: #dddddd;
+}
+.gift_lower_td{
+    padding: 5px 0;
+    font-size: 13px;
+}
+.cut_images{
+    justify-content: space-around;
+}
+.giftInput_boxes{
+    display: flex;
+    justify-content: center;
+}
+.input_values{
+    justify-content: space-between;
+}
+.input_values div{
+    min-width: 60px;
+    padding: 5px;
+    border: 1px solid var(--main-color);
+}
+  .Gift_input{
+    position: relative;
+    width: 100%;
+    text-align: center;
+   }
+   .Gift_input input[type="range"] {
+      pointer-events: none;
+      position: absolute;
+      left: 0;
+      right: 0;
+      -webkit-appearance: none;
+      border: none;
+      outline: none;
+      height: 6px;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      background-color: var(--main-color);
+    }  
+    
+   .Gift_input input[type="range"]::-webkit-slider-thumb {
+      pointer-events: all;
+      position: relative;
+      z-index: 1;
+      outline: 0;    
+      -webkit-appearance: none;
+      width: 28px;
+      height: 13px;
+      border: none;
+      background-color: var(--light-txt);
+      cursor: pointer;
+    }
+    .Gift_input input[type="range"]::-moz-range-thumb{
+        pointer-events: all;
+        position: relative;
+        z-index: 10; 
+        -moz-appearance: none;
+        width: 28px;
+        height: 13px;
+        border: none;
+        background-color: var(--light-txt);
+        cursor: pointer;
+    }
+    .Gift_input  input[type="range"]::-ms-thumb {
+        pointer-events: all;
+        position: relative;
+        z-index: 10;
+        outline: 0;    
+        -ms-appearance: none;
+        width: 28px;
+        height: 13px;
+        border: 0;
+        background-color: var(--light-txt);
+        cursor: pointer;
+    }
+    .Gift_input input[type=range]::-moz-range-track {
+        position: relative;
+        z-index: -1;
+        background-color: rgb(70, 67, 67);
+        border: 0;
+    }
+    .Gift_input input[type=range]:last-of-type::-moz-range-track  {
+        -moz-appearance: none;
+        background: none transparent;
+        border: 0;
+    }
+    .Gift_input input[type=range]::-moz-focus-outer{
+        border: 0;
+    }
+
+
+@media(max-width: 1430px){
     .perSignUpIncontact input{
         width: 70%;
+    }
+
+    /* gift  */
+    .giftTable-Box{
+        overflow-x: scroll;
+    }
+
+    /* diamond */
+    .diamondTxt-box, .diamondTxt-box2{
+        padding: 4rem;
+    }
+}
+
+@media(max-width:1260px){
+    /* footer  */
+    .certImg{
+        overflow-x: scroll;
     }
 }
 
@@ -901,7 +1144,11 @@ body{
   /* cart  */
   .cartContent{
     overflow-x: scroll
-}
+   }
+  /* diamond */
+  .diamondTxt-box, .diamondTxt-box2{
+    padding: 1rem;
+   }
 }
 @media(max-width: 990px){
     /* header  */
@@ -909,6 +1156,10 @@ body{
         max-width: 100px;
     }
 
+    /* footer  */
+    .certImg{
+        overflow-x:hidden;
+    }
     /* sign up  */
     .perSignUpIn{
         grid-template-columns: repeat(1, auto);
@@ -935,6 +1186,27 @@ body{
     }
     .perSignUpIncontact input{
         width: 100%;
+    }
+
+    /* diamond  */
+    .downSmallDiamondRelative{
+        position: static;
+        bottom: 0;
+    }
+    .largeImgBox-diamond{
+        position: static;
+        z-index: 1;
+    }
+    .margin-Bottom_diamond{
+        margin-bottom: 10px;
+    }
+    .diamondSmallConatainer .container{
+        padding-right: var(--bs-gutter-x,.75rem);
+        padding-left: var(--bs-gutter-x,.75rem);
+        z-index: 1;
+    }
+    .diamond-small-img{
+        text-align: center;
     }
 }
 
@@ -967,7 +1239,18 @@ body{
         padding-top: .5rem;
     }
 }
-
+@media(max-width: 560px){
+    /* diamond  */
+    .diamondLarge-Imf-txt1,.diamondLarge-Imf-txt2 {
+        max-width: 400px;
+        text-align: end;
+        color: white;
+        position: absolute;
+        right: 8%;
+        bottom: 3%;
+        font-size: small;
+    }
+}
 @media(max-width: 500px){
     /* header  */
     .headerLogo img{
