--- a/style.css
+++ b/style.css
@@ -150,12 +150,16 @@ body{
 .perIcon img{
     max-width: 32px;
 }
-.hambBar{
+/* .hambBar{
     min-width: 10rem;
-}
+} */
 .upperHdCont{
-    display: flex;
-    justify-content: space-between;
+    margin: 0 30px;
+    /* display: flex;
+    justify-content: space-between; */
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+
 }
 .wholeHeader.custHeadClass .upperHdCont{
     padding: .5rem 0;
@@ -166,11 +170,13 @@ body{
 .wholeHeader.active .upperHeader{
     box-shadow: none;
 }
-
+.headerIconUpper{
+    margin: auto 0;
+}
 .headerIcon{
     display: flex;
-    margin: auto 0;
-    column-gap: 10px;
+    column-gap: 5px;
+    justify-content: flex-end;
 }
 .perIcon{
     cursor: pointer;
@@ -185,6 +191,9 @@ body{
     font-size: 24px;
     cursor: pointer;
     display: none;
+}
+.NavIcon i{
+    color: var(--main-color);
 }
 .wholeHeader.custHeadClass .NavIcon{
     display: block;
@@ -260,7 +269,7 @@ body{
     text-decoration: none;
     background-color: var(--main-color);
 }
-.loginIconHd{
+/* .loginIconHd{
     position: relative;
 }
 .logSign{
@@ -286,7 +295,7 @@ body{
 .logSign ul{
     padding-left: .3rem;
     padding-top: .4rem;
-}
+} */
 .nav-item:hover a{
     color: var(--light-txt);
 }
@@ -305,6 +314,32 @@ body{
 }
 .dropdown-toggle{
     pointer-events: none;
+}
+.headerIconLower{
+    display: none;
+}
+
+
+.signUp_signIn a{
+    text-decoration: none;
+}
+.signUp_signIn a:hover{
+   color: var(--light-txt);
+}
+.signUp_signIn.sign_up_in_cust a:hover{
+    color: var(--main-color);
+}
+.signupHome a, .signupHome{
+    color: white;
+}
+.signupHome.sign_up_in_cust a, .signupHome.sign_up_in_cust{
+    color: var(--light-txt);
+}
+.signupNotHome a{
+    color: var(--light-txt);
+}
+.signupNotHome a:hover{
+    color: var(--main-color);
 }
 
 /* banner  */
@@ -356,6 +391,10 @@ body{
     bottom: 8%;
     left: 40%;
 }
+.normalCatTxt{
+    max-width: 445px;
+    float: right;
+}
 
 /* footer  */
 .footer{
@@ -406,11 +445,18 @@ body{
     width: 100%;
 }
 .footerCertImg{
+    /* display: grid;
+    grid-template-columns: repeat(4,auto);
+    column-gap: 8px; */
     display: flex;
+    justify-content: space-between;
 }
-.ftrImg1{
+.footerCertperImg img{
+    max-width: 106px;
+}
+/* .ftrImg1{
     margin-right: 10px;
-}
+} */
 .perFTrSclImg a{
     text-decoration: none;
 }
@@ -434,7 +480,7 @@ body{
 }
 .custom-btns-prev-slider{
     position: absolute;
-    top: 58%;
+    top: 62%;
     left: 5%;
     pointer-events: initial;
     z-index: 10;
@@ -442,10 +488,13 @@ body{
 }
 .custom-btns-next-slider{
     position: absolute;
-    top: 58%;
+    top: 62%;
     right: 5%;
    z-index: 10;
    cursor: pointer;
+}
+.sliderHome{
+    top: 53%;
 }
 .s-content a{
     color: var(--light-txt);
@@ -1041,8 +1090,8 @@ body{
 .gift_certifict_item p{
     min-width: 80px;
 }
-.gift_symentry_item p{
-    min-width: 100px;
+.gift_symentry_item p, .gift_cut2_item p{
+    min-width: 85px;
 }
 .gift_flurence_item p{
     min-width: 90px;
@@ -1259,10 +1308,28 @@ body{
     padding: 1rem;
    }
 }
+
 @media(max-width: 990px){
     /* header  */
     .headerLogo img{
         max-width: 100px;
+    }
+     /* header down  */
+     .headerIconUpper{
+        display: none;
+    }
+    .headerIconLower{
+        display: block;
+    }
+    .signUp_signIn{
+        color: var(--light-txt);
+    }
+    .signUp_signIn a{
+        color: var(--light-txt);
+    }
+    .headerIcon{
+        justify-content: center;
+        margin-top: 10px;
     }
 
     /* footer  */
@@ -1349,6 +1416,10 @@ body{
     }
 }
 @media(max-width: 560px){
+    /* header  */
+    .upperHdCont{
+        margin: 0 10px;
+    }
     /* diamond  */
     .diamondLarge-Imf-txt1,.diamondLarge-Imf-txt2 {
         max-width: 400px;
