--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ body{
     color: white;
     font-size: 24px;
     cursor: pointer;
+    position: relative;
+    right: 1.8rem;
 }
 .serachInput_content input{
     min-width: 40vw;
@@ -161,8 +163,13 @@ body{
     grid-template-columns: 1fr auto 1fr;
 
 }
-.wholeHeader.custHeadClass .upperHdCont{
+.wholeHeader .upperHdCont{
     padding: .5rem 0;
+    position: relative;
+    top: .35rem;
+}
+.wholeHeader.custHeadClass .upperHdCont{
+    position: static;
 }
 .wholeHeader.custHeadClass .upperHeader{
     box-shadow: 0px 1px 11px -2px var(--main-color);
@@ -177,10 +184,31 @@ body{
     display: flex;
     column-gap: 5px;
     justify-content: flex-end;
+    position: relative;
+    top: .45rem;
 }
 .perIcon{
     cursor: pointer;
+    position: relative;
 }
+.perIcon a{
+    text-decoration: none;
+}
+.Wish_cart_number{
+    position: absolute;
+    background-color: var(--main-color);
+    border-radius: 50%;
+    min-width: 22px;
+    min-height: 22px;
+    font-size: 14px;
+    text-align: center;
+    top: -1.1rem;
+    left: 0.7rem;
+    color: white;
+    padding: 1px 4px;
+}
+
+
 .perIcon img:hover{
     filter: invert(71%) sepia(79%) saturate(92%) hue-rotate(332deg) brightness(98%) contrast(98%);
 }
@@ -246,8 +274,9 @@ body{
 .navbar-nav .nav-link{
     color: var(--white-color);
     font-size: 18px;
-    padding-left: 10px;
-    padding-right: 10px;
+    border: 2px solid transparent;
+    padding: 0.1rem 0;
+    margin: 0.4rem .85rem;
 }
 .customNavCss li:hover{
     background-color: var(--main-color);
@@ -297,20 +326,22 @@ body{
     padding-left: .3rem;
     padding-top: .4rem;
 } */
-.nav-item:hover a{
+.nav-item:hover .nav-link{
     color: var(--light-txt);
+    border-bottom: 2px solid var(--light-txt);
 }
 .nav-item:hover > .dropdown-menu{
     position: absolute;
     inset: 0px auto auto 0px;
-    left: -.9rem;
+    left: -.6rem;
     margin: 0px;
     transform: translate3d(0px, 45px, 0px);
     display: block;
-    top: -2px;
+    top: 2px;
     border: none;
     border-radius:0;
     min-width: 11.5rem;
+    background-color:#ececec;
 }
 .nav-item ul{
     padding: 0;
@@ -512,7 +543,7 @@ body{
     top: 55%;
 }
 .sliderNotHome{
-    top: 59%;
+    top: 57%;
 }
 .sliderHomeProd{
     top: 65%;
@@ -525,6 +556,12 @@ body{
 
 
 /* ring  */
+/* added css  */
+.ringWCIcon{
+    margin: auto 0;
+}
+
+
 .ring-banner img{
     min-width: 100%;
 }
@@ -669,7 +706,8 @@ body{
 }
 .wishProdCross{
     padding: 7px 11px;
-    border: 1px solid black;
+    border: 1px solid var(--light-txt);
+    color: var(--light-txt);
 }
 .wishProd-Img img{
     max-width: 110px;
@@ -710,25 +748,28 @@ body{
     margin: auto 0;
     padding-right: 8px;
 }
-.QtyChange-box{
+
+
+/* removed css  */
+/* .QtyChange-box{
     padding: 8px;
     min-width: 60px;
     border: 1px solid var(--light-txt);
     cursor: pointer;
     position: relative;
-}
-.prodIWhole_div{
+} */
+/* .prodIWhole_div{
    position: absolute; 
    right: 17%;
    bottom: 1.3rem;
-}
-.QtyChange-box {
+} */
+/* .QtyChange-box {
     display: flex;
-}
-.Prod_detIDiv{
+} */
+/* .Prod_detIDiv{
     height: 8px;
-}
-.QtyChange-box div i{
+} */
+/* .QtyChange-box div i{
     font-size: 22px;
 }
 .prod_det_qtyox div i{
@@ -738,7 +779,47 @@ body{
 .giftViewQty div i{
     color: var(--main-color);
     height: 7px;
+} */
+
+/* added csss  */
+#ProdDetQtyNum{
+ margin: auto;
 }
+.QtyChange-box{
+    padding: 0 8px;
+    min-width: 75px;
+    border: 1px solid var(--light-txt);
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.prodIWhole_div img{
+    max-width: 22px;
+    padding: 4px;
+    margin: 3px;
+}
+.prodIWhole_div{
+    flex-direction: column;
+}
+
+
+.hideen_img_box a, .Toggle_per_img a{
+    text-decoration: none;
+}
+.perIcon{
+    column-gap: 10px;
+}
+.perIcon img{
+    max-width: 30px;
+}
+.hideen_img_box_upper{
+    display: none;
+}
+.hideen_img_box_upper.active{
+    display: block;
+}
+
+
 .prodDetaiButton{
     display: flex;
     column-gap: 10px;
@@ -837,10 +918,10 @@ body{
     font-size: 18px;
 }
 .productTableCart{
-    min-width: 350px;
+    min-width: 310px;
 }
 .QPT{
-    min-width: 200px;
+    min-width: 188px;
 }
 .upperTrCartTable td{
     border: 1px solid var(--light-txt);
@@ -855,7 +936,7 @@ body{
 .cartProdImg img{
     max-width: 100px;
     margin: 5px;
-    height: 125px;
+    height: 112px;
 }
 .cartProdCont{
     display: grid;
@@ -1136,12 +1217,21 @@ body{
     position: relative;
 }
 .diamondLarge-Imf-txt1,.diamondLarge-Imf-txt2 {
-    max-width: 400px;
+    font-size: 15px;
     text-align: end;
     color: white;
     position: absolute;
     right: 8%;
     bottom: 16%;
+}
+.diamondLarge-Imf-txt1{
+    max-width: 369px;
+}
+.diamondLarge-Imf-txt2{
+    max-width: 342px;
+}
+.D_journey_small{
+    font-size: 15px;
 }
 
 /* story  */
@@ -1152,14 +1242,16 @@ body{
     font-size: 17px;
 }
 .story-dot div{
-    width: 6px;
-    height: 6px;
+    width: .45rem;
+    height: .45rem;
     background-color: var(--main-color);
     border-radius: 50%;
     margin: 0 4px;
 }
 .story-dot{
     margin: auto;
+    position: relative;
+    bottom: -.8px;
 }
 .storyImg-head{
     margin: auto;
