--- a/style.css
+++ b/style.css
@@ -102,9 +102,10 @@ body{
     border: 1px solid var(--main-color);
     outline: none;
     background-color: var(--main-color);
-    color: var(--light-footerbg);
-    padding: 5px 15px;
+    color: white;
+    padding: 3px 15px;
     font-size: 18px;
+    min-width: 133px;
 }
 .btns:hover{
     background-color: var(--white-color);
@@ -113,7 +114,7 @@ body{
 }
 .btns a{
     text-decoration: none;
-    color: var(--light-footerbg);
+    color: white;
 }
 .btns:hover > a{
     color: var(--main-color);
@@ -157,14 +158,15 @@ body{
 } */
 .upperHdCont{
     margin: 0 30px;
-    /* display: flex;
-    justify-content: space-between; */
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
-
+    grid-template-columns: repeat(3, 1fr);
+}
+.chiragLogo{
+    display: flex;
+    justify-content: center;
 }
 .wholeHeader .upperHdCont{
-    padding: .5rem 0;
+    padding: .8rem 0;
     position: relative;
     top: .35rem;
 }
@@ -182,10 +184,8 @@ body{
 }
 .headerIcon{
     display: flex;
-    column-gap: 5px;
+    column-gap: 7px;
     justify-content: flex-end;
-    position: relative;
-    top: .45rem;
 }
 .perIcon{
     cursor: pointer;
@@ -233,16 +233,18 @@ body{
     display: block;
 }
 /* header Down  */
-.wholeHeader{
+/* .wholeHeader{
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     z-index: 1000;
-}
+} */
 .wholeHeader.headerNotHomeWhole{
     position: sticky;
     top: 0;
+    background-color: white;
+    z-index: 1000;
 }
 .wholeHeader.custHeadClass{
     position: sticky;
@@ -326,7 +328,44 @@ body{
     padding-left: .3rem;
     padding-top: .4rem;
 } */
+
+.dropdown_icon i{
+    color: var(--light-txt);
+    position: relative;
+    top: .1rem;
+}
+.loginIconHd{
+    position: relative;
+}
+.logOut{
+    position: absolute;
+    top: 1.6rem;
+    left: 1.8rem;
+    display: none;
+    min-width: 130px;
+    box-shadow: 0px 7px 10px -4px var(--light-txt);
+    border-radius: 3px;
+    background-color: white;
+}
+.loginIconHd:hover > .logOut{
+    display: block;
+}
+.logOut a{
+    color: var(--light-txt);
+}
+.logOut div{
+  margin-left: 15px;
+}
+.logOut a:hover{
+    color: var(--main-color);
+}
+
+
 .nav-item:hover .nav-link{
+    color: var(--light-txt);
+    border-bottom: 2px solid var(--light-txt);
+}
+.navbar-nav .active_nav_link{
     color: var(--light-txt);
     border-bottom: 2px solid var(--light-txt);
 }
@@ -352,6 +391,11 @@ body{
 .headerIconLower{
     display: none;
 }
+
+.arrival_down_category .row{
+    --bs-gutter-x: 1rem
+}
+
 
 
 .signUp_signIn a{
@@ -421,6 +465,12 @@ body{
 .cateImg{
     position: relative;
 }
+
+.home_banner_large_text{
+    color: white;
+    font-family: 'adeal', sans-serif;
+    font-size: 52px;
+}
 .discoverBtn a{
     text-decoration: none;
     color: var(--white-color);
@@ -428,12 +478,18 @@ body{
     font-size: 20px;
 }
 .discoverBtn{
-    position: absolute;
-    bottom: 6%;
-    left: 40%;
+    max-width: 150px;
+    margin: 25px auto 0 auto;
     border: 1px solid white;
-    margin-top: 15px;
 }
+
+.home_categoty_box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 80%);
+}
+
 .normalCatTxt{
     max-width: 445px;
     float: right;
@@ -602,12 +658,6 @@ body{
     color: var(--white-color);
     cursor: pointer;
 }
-.sorting-content{
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--main-color);
- 
-}
 .perSortingBox select:focus{
     border: none;
     outline: none !important;
@@ -638,6 +688,49 @@ body{
 .long-img-box img{
     height: 56.79pc;
     width: 100%;
+}
+
+.sorting-content{
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--main-color);
+    position: relative;
+}
+.left-Sorting{
+    padding: 3px 5px;
+}
+.left-Sorting span{
+    color: white;
+    cursor: pointer;
+    padding: 6px;
+}
+.left-Sorting span i{
+    position: relative;
+    bottom: .1rem;
+    font-size: 10px;
+}
+.sorting_list{
+    position: absolute;
+    width: max-content;
+    background: white;
+    padding: 10px;
+    right: 0;
+    top: 3%;
+    top: 1.9rem;
+    display: none;
+}
+.left-Sorting:hover > .sorting_list{
+    display: block;
+}
+.srting_per_item{
+    padding: 5px 0;
+}
+.srting_per_item a{
+    color: var(--light-txt);
+    text-decoration: none;
+}
+.srting_per_item a:hover{
+    color: var(--main-color);
 }
 
 /* allimg btn  */
@@ -837,9 +930,9 @@ body{
 }
 
 /* sign up  */
-.signUpBtn{
+/* .signUpBtn{
  padding: 2px 29px;
-}
+} */
 .signupInContainer{
     min-height: 60vh;
 }
@@ -1139,9 +1232,9 @@ body{
 .nameMobileContact{
     display: flex;
 }
-.contactSubMitBtn{
+/* .contactSubMitBtn{
     padding: 2px 37px;
-}
+} */
 .ConatctPara span{
     font-size: 20px;
 }
@@ -1155,10 +1248,10 @@ body{
     padding-left: var(--bs-gutter-x,5rem);
     padding-right: var(--bs-gutter-x,5rem);
 }
-.contactbox_Container{
+/* .contactbox_Container{
     display: grid;
     grid-template-columns: 5% 95%;
-}
+} */
 
 /* rani sa  */
 .ranisaBack{
@@ -1330,11 +1423,11 @@ body{
     min-width: 90px;
 }
 .gift_upper_td{
-    min-width: 100px;
+    min-width: 90px;
     padding: 18px 0;
 }
 .gift_lower_td{
-    min-width: 100px;
+    min-width: 90px;
 }
 .gift_lower_td a{
     text-decoration: none;
@@ -1362,10 +1455,10 @@ body{
     justify-content: center;
     column-gap: 2rem;
 }
-.giftInput_boxes{
+/* .giftInput_boxes{
     display: flex;
     justify-content: center;
-}
+} */
 .input_values{
     justify-content: space-between;
 }
@@ -1387,6 +1480,11 @@ body{
     filter: invert(71%) sepia(79%) saturate(10%) hue-rotate(332deg) brightness(10%) contrast(98%);
 }
 
+.gift_input_slider{
+    width: 100%;
+    background-color: var(--main-color);
+    height: 6px;
+}
 
   .Gift_input{
     position: relative;
@@ -1397,6 +1495,7 @@ body{
       pointer-events: none;
       position: absolute;
       left: 0;
+      top: -6px;
       right: 0;
       -webkit-appearance: none;
       border: none;
@@ -1405,7 +1504,7 @@ body{
       width: 100%;
       margin: 0;
       padding: 0;
-      background-color: var(--main-color);
+      background-color: transparent;
     }  
     
    .Gift_input input[type="range"]::-webkit-slider-thumb {
@@ -1447,7 +1546,7 @@ body{
     .Gift_input input[type=range]::-moz-range-track {
         position: relative;
         z-index: -1;
-        background-color: rgb(70, 67, 67);
+        /* background-color: rgb(70, 67, 67); */
         border: 0;
     }
     .Gift_input input[type=range]:last-of-type::-moz-range-track  {
@@ -1459,6 +1558,17 @@ body{
         border: 0;
     }
 
+.gift_cut_content .row{
+    margin-right: calc(var(--bs-gutter-x) * 0.7);
+    margin-left: calc(var(--bs-gutter-x) * 0.7);
+}
+
+.gift_PRICE_td{
+    min-width: 200px;
+}
+/* .giftTable-Box{
+    overflow-x: scroll;
+} */
 
 /* compare  */
 .headerIcon2{
@@ -1474,18 +1584,23 @@ body{
 .otherProd_not_overflow{
     overflow-x: auto;
 }
-.another_prod_td{
+
+
+.item_prod_td{
     min-width: 90px;
     border: 1px solid var(--main-color);
     font-size: 13px;
     padding: 3px 5px;
 }
-.another_prod_table{
+.item_prod_table{
     column-gap: 10px;
 }
-.shadedTr_another{
+.shadedTr_item{
     background-color: #dfe1e2;
 }
+
+
+
 .Compare_box_img{
     background-color: #e7e9ec;    
     position: relative;
@@ -1572,6 +1687,10 @@ body{
   /* diamond */
   .diamondTxt-box, .diamondTxt-box2{
     padding: 1rem;
+   }
+
+   .home_banner_large_text{
+       font-size: 42px;
    }
 }
 @media(max-width: 1025px){
@@ -1681,6 +1800,11 @@ body{
     .wishProd-Img img{
         max-width: 100%;
     }
+
+    .home_banner_large_text{
+        font-size: 32px;
+        top: 58%;
+    }
 }
 
 @media(max-width: 800px){
@@ -1715,6 +1839,11 @@ body{
         padding-top: .5rem;
     }
 
+    .home_banner_large_text{
+        font-size: 42px;
+        top: 66%;
+    }
+
 }
 @media(max-width: 560px){
     /* header  */
@@ -1731,6 +1860,12 @@ body{
         bottom: 3%;
         font-size: small;
     }
+    /* xyz  */
+    .item_prod_table{
+        overflow-x: scroll;
+    }
+
+
 }
 @media(max-width:537px){
     .perInputSUpIn{
@@ -1755,14 +1890,20 @@ body{
     }
 
     /* xyz  */
-    .another_prod_table{
+    /* .item_prod_table{
         flex-direction: column;
     }
-    .another_first_table{
+    .item_first_table{
         margin-bottom: 10px;
-    }
+    } */
     .Compare_box_img{
         min-height: 400px;
+    }
+
+    .home_banner_large_text{
+        font-size: 37px;
+        top: 64%;
+        left: 26%;
     }
 }
 @media(max-width: 475px){
@@ -1787,6 +1928,10 @@ body{
 @media(max-width: 400px){
     .categoriesBox{
         margin-top: 4rem;
+    }
+    .home_banner_large_text{
+        font-size: 30px;
+        top: 59%;
     }
 }
 
